--- a/TickTockTee/TTTSigninViewController.xib
+++ b/TickTockTee/TTTSigninViewController.xib
@@ -189,6 +189,9 @@
                                 <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </state>
+                            <connections>
+                                <action selector="FacebookSignup:" destination="-1" eventType="touchUpInside" id="FeB-Yv-ZQt"/>
+                            </connections>
                         </button>
                     </subviews>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
